--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ pytz==2025.2
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
+flask_sqlalchemy==3.1.1
+flask_wtf==1.2.1
+wtforms==3.1.2
